force-app/main/default/objects/Item_Catalog__c/Item_Catalog__c.object-meta.xml
<CustomObject>
    <description>Master product/labor catalog. Each item has unit price, time standard, category, and active flag. Used by Quote Line Items and Work Order Line Items for pricing and time standards.</description>
    <label>Item Catalog</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>