force-app/main/default/objects/Item_Catalog__c/fields/BMG_Code__c.field-meta.xml
<CustomField>
    <fullName>BMG_Code__c</fullName>
    <description>Builder Market Group line item code that maps this catalog item to a Builder_Pricing_Line__c. Used to auto-populate BMG contracted rates on quotes.</description>
    <label>BMG Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>