force-app/main/default/objects/Item_Catalog__c/fields/Builder_Specific__c.field-meta.xml
<CustomField>
    <fullName>Builder_Specific__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Specific</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Item_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>