force-app/main/default/objects/Item_Catalog__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Material or work category for this catalog item. Used as a filter and grouping key when lookup fields reference Item_Catalog__c from WorkOrderLineItem, Invoice_Line_Item__c, and Takeoff_Line__c. This is a reference/master catalog field. Item_Catalog__c is not a transactional quote line object.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sod</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>Shrub</fullName>
            </value>
            <value>
                <fullName>Mulch</fullName>
            </value>
            <value>
                <fullName>Pine Straw</fullName>
            </value>
            <value>
                <fullName>Aqua Equipment</fullName>
            </value>
            <value>
                <fullName>Irrigation Equipment</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Hardscape</fullName>
            </value>
            <value>
                <fullName>Hardscape Assembly</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Temp Irrigation</fullName>
            </value>
            <value>
                <fullName>Lawncare</fullName>
            </value>
            <value>
                <fullName>Straw</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Empty Pallets</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>