force-app/main/default/objects/Item_Catalog__c/fields/Count_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_Date__c</fullName>
    <description>Date of the most recent physical inventory count for this item. Set during each count import. Used to identify stale count data.</description>
    <label>Count Date</label>
    <type>Date</type>
</CustomField>