force-app/main/default/objects/Item_Catalog__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <description>General ledger account code for revenue recognition and cost allocation.</description>
    <label>GL Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>