force-app/main/default/objects/Item_Catalog__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Supplier part number or internal SKU. Used to match catalog items to purchase orders and supplier invoices.</description>
    <label>Item Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>