force-app/main/default/objects/Item_Catalog__c/fields/Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost__c</fullName>
    <description>Standard labor cost per unit. Used for COGS and gross margin calculations on quotes and invoices.</description>
    <label>Labor Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>