force-app/main/default/objects/Item_Catalog__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <description>Standard material/supply cost per unit.</description>
    <label>Material Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>