force-app/main/default/objects/Item_Catalog__c/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <description>Current quantity on hand from the most recent physical count. Updated by inventory count imports and manual adjustments. Does not decrement automatically — use Inventory_Count__c events to track consumption.</description>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>