force-app/main/default/objects/Item_Catalog__c/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <description>Total standard cost per unit (labor + material). If populated, overrides Labor_Cost + Material_Cost sum for margin calculations.</description>
    <label>Standard Cost (Total)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>