force-app/main/default/objects/Item_Catalog__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <description>Physical storage location for this item — rack bay (IWA1, IWB2, etc.), yard area, or named storage zone. Used for physical counts and pull ticket routing.</description>
    <label>Storage Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>