force-app/main/default/objects/Item_Catalog__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Primary supplier or vendor name for this material item.</description>
    <label>Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>