force-app/main/default/objects/Item_Catalog__c/fields/Time_Standard_Min__c.field-meta.xml
<CustomField>
    <fullName>Time_Standard_Min__c</fullName>
    <label>Time Standard (Minutes)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>