force-app/main/default/objects/Item_Catalog__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Unit of measure for this catalog item. Used in quantity calculations on WorkOrderLineItem, Invoice_Line_Item__c, and Takeoff_Line__c when they reference this Item_Catalog record. Values match the LOVING standard unit set used in BMGPricingService and field documentation.</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>SQFT</fullName>
            </value>
            <value>
                <fullName>LF</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>BALE</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
            <value>
                <fullName>PALLET</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>ROLL</fullName>
            </value>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>BUNDLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>